--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#2">ABOUT</a></li>
                 <li><a href="#3">WORK</a></li>
                 <li><a href="#4">ME</a></li>
-                <li><a href="https://instagram.com/vino.dii_?igshid=OGQ5ZDc2ODk2ZA==">INSTAGRAM</a></li>
+                <li><a href="https://www.linkedin.com/in/vinodanee-saumya-samarathunga">LINKDEIN</a></li>
             </ul>
             <a class="resume-btn" href="./CV.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
         </nav>
